[package]
name = "serum-iq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serum_dex = { version = "0.5.4", features = ["client"] }
redis = { version = "0.21.5", features = ["tokio-comp"] }
rdkafka = { version = "0.28.0" }
clap = "3.0.12"
log = "0.4.14"
tokio = { version = "1.15.0", features = ["full"] }
chrono = "0.4.19"
env_logger = "0.9.0"
solana-client = "1.9.5"
solana-sdk = "1.9.5"
anyhow = "1.0.53"
safe-transmute = "0.11.2"
bytemuck = "1.9.1"
arrayref = "0.3.6"